# td

./: .env.enc  .gitignore  README.md  demo.tape  pyproject.toml
.github/workflows/: publish.yml
src/td/: CHANGELOG.md  __main__.py  db.py  terminal.py  tui.py
