[project]
name = "lucaspon-td"
version = "0.1.2"
description = "Minimal TUI todo CLI"
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
    "watchdog>=6.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
td = "td.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td"]

[dependency-groups]
dev = []
