[project]
name = "td-task"
version = "0.1.3"
description = "Minimal TUI todo app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
    "watchdog>=6.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
td = "td.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td"]

[dependency-groups]
dev = []
